--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <br>
                         <h4>Full name</h4>
                         <p>João Ribeiro</p>
-                        <h4>Country <i class="bi bi-flag"></i></h4>
+                        <h4>Country <i class="bi bi-geo-alt"></i></i></h4>
                         <p>Portugal</p>
                         <h4>Education <i class="bi bi-award"></i></h4>
                         <p><b>University Of The Azores:</b> Bachelor's of Informatics</p>
@@ -81,7 +81,7 @@
                 <div id="hide">
                     <h1 class="center">Hello world!</h1>
                     <ul>
-                        <li>This page was a (beginner) homework of the course "web design I", of the "Web Application Development" program of the UAc</li>
+                        <li>This page was a (beginner) homework of the course "web design I", of the "Web Application Development" program at the UAc</li>
                         <li>This site was made with Bootstrap Framework and is responsive</li>
                         <li><b>PS: </b> got a good review from the professor <i class="bi bi-emoji-smile"></i></li>
                     </ul>
