Updated index file

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </style>
 
     <body>
-        <div class="container div-color" style="margin-bottom: 25px;">
+        <div class="container div-color" style="margin-bottom: 25px; margin-top: 25px;">
             <div class="container-fluid bgc-grey">
                 <h2 class="center">Portfolio Page</h2>
                 <h4 class="right-text">by <u>Joao Ribeiro</u></h4>
