--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
                         <img src="face.jpg"></img>
                     </div>
                     <div class="col-sm-8">
-                        <h2 class="center">User's ID <i class="bi bi-credit-card"></i></h2>
+                        <h2 class="center"><i class="bi bi-credit-card"></i> User's ID</h2>
                         <br>
                         <h4>Full name</h4>
                         <p>João Ribeiro</p>
-                        <h4>Country <i class="bi bi-geo-alt"></i></i></h4>
+                        <h4><i class="bi bi-geo-alt"></i> Country</h4>
                         <p>Portugal</p>
-                        <h4>Education <i class="bi bi-award"></i></h4>
+                        <h4><i class="bi bi-award"></i> Education</h4>
                         <p><b>University Of The Azores:</b> Bachelor's of Informatics</p>
                     </div>
                 </div>
@@ -48,7 +48,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
-                        <h2 class="center">Links <i class="bi bi-globe2"></i></h2>
+                        <h2 class="center"><i class="bi bi-globe2"></i> Links</h2>
                         <br>
                         <h4>LinkedIn:</h4><a href="https://www.linkedin.com/in/joao-paulo-faria-ribeiro-884a39140/">Link</a>
                         <br>
@@ -59,11 +59,11 @@
                         <a href="https://bitbucket.org/Madness_exe/">Madness.exe</a>
                     </div>
                     <div class="col-sm-6">
-                        <h2 class="center">About Me <i class="bi bi-info-circle"></i></h2>
+                        <h2 class="center"><i class="bi bi-info-circle"></i> About Me</h2>
                         <ul style="list-style-type: circle">
-                            <li>Competitive Programming enthusiastic <i class="bi bi-laptop"></i></li>
-                            <li>Likes to play video-games <i class="bi bi-controller"></i></li>
-                            <li>Likes to travel (I have a crush on the world) <i class="bi bi-binoculars"></i></li> 
+                            <li><i class="bi bi-laptop"></i> Competitive Programming enthusiast</li>
+                            <li><i class="bi bi-controller"></i> Likes to play video-games</li>
+                            <li><i class="bi bi-binoculars"></i> Likes to travel (I have a crush on the world)</li> 
                         </ul>
                         
                     </div>
