Update website June 2023

--- a/index.html
+++ b/index.html
@@ -70,6 +70,37 @@
                 </div>
             </div>
 
+            <hr>
+
+            <div class="container">
+                <h2 class="center">Games</h2>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <h2 class="center">Genre of Games I like</h2>
+                        <ol>
+                            <li>JRPG</li>
+                            <li>Platforms</li>
+                            <li>Trading Card Games (Magic: The Gathering)</li>
+                            <li>Tatical RPG</li>
+                            <li>Racing (mainly with friends)</li>
+                            <li>FPS (mainly with friends)</li>
+                        </ol>
+                    </div>
+                    <div class="col-sm-6">
+                        <h2 class="center">Consoles I Own</h2>
+                        <ul>
+                            <li>Sega Master System</li>
+                            <li>Sega Dreamcast</li>
+                            <li>(Original) XBOX</li>
+                            <li>Nintendo GameCube</li>
+                            <li>Nintendo Wii U</li>
+                            <li>Sony PS3</li>
+                            <li>Nintendo Switch</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
             <div class="home active">
                 <section class="center">
                     <form onclick="return false">
