Added video game icon

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <hr>
 
             <div class="container">
-                <h1 class="center">Games</h1>
+                <h1 class="center"><i class="bi bi-joystick"></i> Video Games</h1>
                 <div class="row">
                     <div class="col-sm-6">
                         <h2 class="center">Genre of Games I like</h2>
