Updated the consoles models

--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
                             <li>Sega Dreamcast</li>
                             <li>(Original) XBOX</li>
                             <li>Nintendo GameCube</li>
-                            <li>Nintendo Wii U</li>
-                            <li>Sony PS3</li>
-                            <li>Nintendo Switch</li>
+                            <li>Nintendo Wii U (TLoZ Wind Waker Edition)</li>
+                            <li>Sony PS3 (Super Slim Model)</li>
+                            <li>Nintendo Switch (OLED)</li>
                         </ul>
                     </div>
                 </div>
