update file folder

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-4">
-                        <img src="face.jpg"></img>
+                        <img src="images/face.jpg"></img>
                     </div>
                     <div class="col-sm-8">
                         <h2 class="center"><i class="bi bi-credit-card"></i> User's ID</h2>
