--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
                         <img src="images/face.jpg"></img>
                     </div>
                     <div class="col-sm-8">
-                        <h2 class="center"><i class="bi bi-credit-card"></i> User's ID</h2>
+                        <h2 class="center"><i class="bi bi-credit-card"></i> Joao's ID</h2>
                         <br>
                         <h4>Full name</h4>
                         <p>João Ribeiro</p>
                         <h4><i class="bi bi-geo-alt"></i> Country</h4>
                         <p>Portugal</p>
                         <h4><i class="bi bi-award"></i> Education</h4>
-                        <p><b>University Of The Azores:</b> Bachelor's of Informatics</p>
+                        <p><b>University Of The Azores:</b> Bachelor Degree in Informatics</p>
                     </div>
                 </div>
             </div>
@@ -52,11 +52,9 @@
                         <br>
                         <h4>LinkedIn:</h4><a href="https://www.linkedin.com/in/joao-paulo-faria-ribeiro-884a39140/">Link</a>
                         <br>
-                        <h4>GitHub:</h4>
-                        <a href="https://github.com/jpfr12">jpfr12</a>
+                        <h4>GitHub:</h4><a href="https://github.com/jpfr12">jpfr12</a>
                         <br>
-                        <h4>Bitbucket:</h4>
-                        <a href="https://bitbucket.org/Madness_exe/">Madness.exe</a>
+                        <h4>Bitbucket:</h4><a href="https://bitbucket.org/Madness_exe/">Madness.exe</a>
                     </div>
                     <div class="col-sm-6">
                         <h2 class="center"><i class="bi bi-info-circle"></i> About Me</h2>
