update index file

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                             <li><i class="bi bi-laptop"></i> Competitive Programming enthusiast</li>
                             <li><i class="bi bi-controller"></i> Likes to play video-games</li>
                             <li><i class="bi bi-binoculars"></i> Likes to travel (I have a crush on the world)</li> 
+                            <li><i class="bi bi-puzzle"></i> I have autism level 1 (formerly known as Asperger's Syndrome)</li>
                         </ul>
                         
                     </div>
