Updated index file

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                         <h4>Full name</h4>
                         <p>João Ribeiro</p>
                         <h4><i class="bi bi-geo-alt"></i> Country</h4>
-                        <p>Portugal</p>
+                        <p>Macau SAR</p>
                         <h4><i class="bi bi-award"></i> Education</h4>
-                        <p><b>University Of The Azores:</b> Bachelor Degree in Informatics</p>
+                        <p><b>University Of Macau:</b> Bachelor Degree in Computer Science</p>
                     </div>
                 </div>
             </div>
