updated index file

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                     <div class="col-sm-8">
                         <h2 class="center"><i class="bi bi-credit-card"></i> Joao's ID</h2>
                         <br>
-                        <h4>Full name</h4>
+                        <h4>Name</h4>
                         <p>João Ribeiro</p>
-                        <h4><i class="bi bi-geo-alt"></i> Country</h4>
+                        <h4><i class="bi bi-geo-alt"></i> Country / Region</h4>
                         <p>Macau SAR</p>
                         <h4><i class="bi bi-award"></i> Education</h4>
                         <p><b>University Of Macau:</b> Bachelor Degree in Computer Science</p>
