--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
         <!-- CSS only -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
         <!-- JavaScript Bundle with Popper -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     </head>
 
     <style>
@@ -61,7 +62,7 @@
                         <ul style="list-style-type: circle">
                             <li><i class="bi bi-laptop"></i> Competitive Programming enthusiast</li>
                             <li><i class="bi bi-controller"></i> Likes to play video-games</li>
-                            <li><i class="bi bi-binoculars"></i> Likes to travel (I have a crush on the world)</li> 
+                            <li><i class="bi bi-globe-americas"></i> Likes to travel (I have a crush on the world)</li> 
                             <li><i class="bi bi-puzzle"></i> I have autism level 1 (formerly known as Asperger's Syndrome)</li>
                         </ul>
                         
@@ -90,11 +91,11 @@
                         <ul>
                             <li>Sega Master System</li>
                             <li>Sega Dreamcast</li>
-                            <li>(Original) XBOX</li>
+                            <li><i class="bi bi-xbox"></i> (Original) XBOX</li>
                             <li>Nintendo GameCube</li>
                             <li>Nintendo Wii U (TLoZ Wind Waker Edition)</li>
-                            <li>Sony PS3 (Super Slim Model)</li>
-                            <li>Nintendo Switch (OLED)</li>
+                            <li><i class="bi bi-playstation"></i> Sony PS3 (Super Slim Model)</li>
+                            <li><i class="bi bi-nintendo-switch"></i> Nintendo Switch (OLED)</li>
                         </ul>
                     </div>
                 </div>
