updated bootstrap version

--- a/index.html
+++ b/index.html
@@ -51,11 +51,9 @@
                     <div class="col-sm-6">
                         <h2 class="center"><i class="bi bi-globe2"></i> Links</h2>
                         <br>
-                        <h4>LinkedIn:</h4><a href="https://www.linkedin.com/in/joao-paulo-faria-ribeiro-884a39140/">Link</a>
+                        <h4><i class="bi bi-linkedin"></i> LinkedIn:</h4><a href="https://www.linkedin.com/in/joao-paulo-faria-ribeiro-884a39140/">Link</a>
                         <br>
-                        <h4>GitHub:</h4><a href="https://github.com/jpfr12">jpfr12</a>
-                        <br>
-                        <h4>Bitbucket:</h4><a href="https://bitbucket.org/Madness_exe/">Madness.exe</a>
+                        <h4><i class="bi bi-github"></i> GitHub:</h4><a href="https://github.com/jpfr12">jpfr12</a>
                     </div>
                     <div class="col-sm-6">
                         <h2 class="center"><i class="bi bi-info-circle"></i> About Me</h2>
