--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 
             <div class="container">
                 <h1 class="center"><i class="bi bi-joystick"></i> Video Games</h1>
+                <br>
                 <div class="row">
                     <div class="col-sm-6">
                         <h2 class="center">Genre of Games I like</h2>
@@ -98,7 +99,17 @@
                     </div>
                 </div>
             </div>
-
+            <hr>
+            <div class="container">
+                <h1 class="center"><i class="bi bi-pc-display"></i> My Personal Computer</h1>
+                <br>
+                <dic class="row">
+                    <div class="col-sm-12">
+                        <img src="images/NewPC.jpg"  width="50" height="100"></img>
+                    </div>
+                </dic>
+            </div>
+            <br>
             <div class="home active">
                 <section class="center">
                     <form onclick="return false">
