--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <style>
         body{
-            background-color: #3399ff;
+            background-color: hsl(213, 13%, 83%);
         }
     </style>
 
@@ -25,7 +25,7 @@
         <div class="container div-color" style="margin-bottom: 25px; margin-top: 25px;">
             <div class="container-fluid bgc-grey">
                 <h2 class="center">Portfolio Page</h2>
-                <h4 class="right-text">by <u>Joao Ribeiro</u></h4>
+                <h4 class="right-text">by <u>Joao Zhao</u></h4>
             </div>
             <br/>
             <div class="container">
@@ -37,7 +37,7 @@
                         <h2 class="center"><i class="bi bi-credit-card"></i> Joao's ID</h2>
                         <br>
                         <h4>Name</h4>
-                        <p>João Ribeiro</p>
+                        <p>João Zhao</p>
                         <h4><i class="bi bi-geo-alt"></i> Country / Region</h4>
                         <p>Macau SAR</p>
                         <h4><i class="bi bi-award"></i> Education</h4>
@@ -71,30 +71,66 @@
             <hr>
 
             <div class="container">
-                <h1 class="center"><i class="bi bi-joystick"></i> Video Games</h1>
+                <h1 class="center">Personal Skills</h1>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <h2 class="center"><i class="bi bi-person-fill-gear"></i> Technical Skills</h2>
+                        <ul>
+                            <li><i class="bi bi-android"></i> Android Development:
+                                <ul>
+                                    <li>Java</li>
+                                    <li>Kotlin</li>
+                                    <li>XML</li>
+                                </ul>
+                                
+                            </li>
+                            <li><i class="bi bi-filetype-html"></i> Webdevelopment (back-end):
+                                <ul>
+                                    <li>HTML</li>
+                                    <li>CSS</li>
+                                    <li>JavaScript</li>
+                                    <li>Bootstrap (Framework)</li>
+                                    <li>React (Framework)</li>
+                                </ul>
+                                
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-6">
+                        <h2 class="center"><i class="bi bi-person-check"></i> Soft Skills</h2>
+                        <ul>
+                            <li>Good listener</li>
+                            <li>Love to learn new technologies</li>
+                            <li>Perfectionist and loyal to his work</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <hr>
+
+            <div class="container">
+                <h1 class="center"><i class="bi bi-briefcase-fill"></i> Work Experience </h1>
                 <br>
                 <div class="row">
                     <div class="col-sm-6">
-                        <h2 class="center">Genre of Games I like</h2>
-                        <ol>
-                            <li>JRPG</li>
-                            <li>Platforms</li>
-                            <li>Trading Card Games (Magic: The Gathering)</li>
-                            <li>Tatical RPG</li>
-                            <li>Racing (mainly with friends)</li>
-                            <li>FPS (mainly with friends)</li>
-                        </ol>
+                        <h2 class="center">Internships</h2>
+                        <br>
+                        <ul>
+                            <li><u>MHD (Moët Hennessy Diageo Hong Kong & Macau)</u> (5 months):
+                                <p><b>Role:</b> Webdeveloper</p>
+                            </li>
+                            <li><u>Alibaba</u> (Hangzhou) (5 months):
+                                <p><b>Role: </b>Android Developer</p>
+                            </li>
+                        </ul>
                     </div>
                     <div class="col-sm-6">
-                        <h2 class="center">Consoles I Own</h2>
+                        <h2 class="center">Full-Time Jobs</h2>
                         <ul>
-                            <li>Sega Master System</li>
-                            <li>Sega Dreamcast</li>
-                            <li><i class="bi bi-xbox"></i> (Original) XBOX</li>
-                            <li>Nintendo GameCube</li>
-                            <li>Nintendo Wii U (TLoZ Wind Waker Edition)</li>
-                            <li><i class="bi bi-playstation"></i> Sony PS3 (Super Slim Model)</li>
-                            <li><i class="bi bi-nintendo-switch"></i> Nintendo Switch (OLED)</li>
+                            <li><u>HSBC</u> (Hong Kong) (2024-Present):
+                                <p><b>Role:</b> Android Developer</p>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -121,7 +157,7 @@
                 <div id="hide">
                     <h1 class="center">Hello world!</h1>
                     <ul>
-                        <li>This page was a (beginner) homework of the course "web design I", of the "Web Application Development" program at the UAc</li>
+                        <li>This page was a (beginner) homework of the course "web design I", of the "Web Application Development" program at the UM</li>
                         <li>This site was made with Bootstrap Framework and is responsive</li>
                         <li><b>PS: </b> got a good review from the professor <i class="bi bi-emoji-smile"></i></li>
                     </ul>
