--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
-                        <h2 class="center"><i class="bi bi-globe2"></i> Links</h2>
+                        <h2 class="center"><i class="bi bi-globe2"></i> Joao On The Web</h2>
                         <br>
-                        <h4><i class="bi bi-linkedin"></i> LinkedIn:</h4><a href="https://www.linkedin.com/in/joao-paulo-faria-ribeiro-884a39140/">Link</a>
+                        <h4><i class="bi bi-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/joao-paulo-faria-ribeiro-884a39140/">Link</a></h4>
                         <br>
-                        <h4><i class="bi bi-github"></i> GitHub:</h4><a href="https://github.com/jpfr12">jpfr12</a>
+                        <h4><i class="bi bi-github"></i> GitHub: <a href="https://github.com/jpfr12">jpfr12</a></h4>
                     </div>
                     <div class="col-sm-6">
                         <h2 class="center"><i class="bi bi-info-circle"></i> About Me</h2>
